src/Cluster_jobs/nimrod_tests/Output/32bit_seed/err/stderr-14.txt
ERROR (Eidos_ExecuteFunction_rmvnorm): function rmvnorm() requires that sigma, the variance-covariance matrix, be positive-definite.

Error on script line 385, character 13:

         effects = rmvnorm(1, pleio_mu, pleio_sigma);      // Calculate effects for m3 here since a mutation callback won't be called since it isn't autogenerated
                   ^^^^^^^
cat: //state/partition1/pbs/tmpdir/pbs.346014.tinmgr2/nimrodg-localact-6721694910908594920/81b484db-640c-4fc0-98e6-0c134dee2ed3/7f77b05c-b41d-4e69-9d3f-009b63c5405e/tmp/out_8T_null_means.csv: No such file or directory
cat: //state/partition1/pbs/tmpdir/pbs.346014.tinmgr2/nimrodg-localact-6721694910908594920/81b484db-640c-4fc0-98e6-0c134dee2ed3/7f77b05c-b41d-4e69-9d3f-009b63c5405e/tmp/out_8T_null_muts.csv: No such file or directory
cat: //state/partition1/pbs/tmpdir/pbs.346014.tinmgr2/nimrodg-localact-6721694910908594920/81b484db-640c-4fc0-98e6-0c134dee2ed3/7f77b05c-b41d-4e69-9d3f-009b63c5405e/tmp/out_8T_null_burnin.csv: No such file or directory
